[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "stablecoins"
version = "0.1.0"
description = "Fetch stablecoins and their total supply from DeFiLlama"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
stablecoins = "stablecoins.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
